--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-lg-10">
-                <h1>Hello.<br/>I'm <span class="text-primary">Kushal Vyas</span>, a graphic and web <span
-                        class="text-primary">designer</span> living in Noida</h1>
+                <h1>Hello.<br/>I'm <span class="text-primary">Kushal Vyas</span>, an actor and <span
+                        class="text-primary">writer</span> living in Noida</h1>
             </div>
         </div>
     </div>
