--- a/index.html
+++ b/index.html
@@ -97,27 +97,32 @@
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6 text-left">
-                        <p style="margin-left: 30px">Kushal Vyas born on 31 August 1994. As a first job he served as an<strong> Anchor </strong>
+                        <p style="margin-left: 30px;text-align: justify">Kushal Vyas born on 31 August 1994. As a first job he served as
+                            an<strong> Anchor </strong>
                             and a <strong> News presenter </strong> with <strong>Delhi99</strong>. He also worked for
                             <strong>CM of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
-                                Handler</strong>.Currently, He is working in <strong>Zee Media</strong> as an main
-                            <strong>Executive Content Writer</strong>.</p>
+                                Handler</strong>.Currently, He is working in <strong>Zee Media</strong> as main
+                            <strong>Content Programmer</strong>.</p>
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
                     </div>
                     <div class="col-sm-6">
-                        <p style="text-align: justify;margin-left: 30px">In this small span of time <strong> Kushal Vyas</strong> got alot
+                        <p style="text-align: justify;margin-left: 30px">In this small span of time <strong> Kushal
+                            Vyas</strong> got alot
                             of opportunities to prove
                             himself and indeed he proved himself worth. With his passion and courage he managed to
                             interview many bollywood Star's and Politicians. Some the Bollywood Celebrities he
-                            interviewed with Delhi99 are <strong>John Abraham/ Sunny Leone/ Heena Khan/ Sapna Pabbhi/
-                                Infinix CEO Anish Kapoor/ Avneet Kaur/ Sidharth Nigam/ Aisha Sharma/ Manoj Bajpayee/ Gippy Grewal/ Binnu Dhillon /Romit Raj (Ex Boyfriend Shilpa Shinde)</strong>
-                            and he also interviewed politicians such as <strong>Manoj Tiwari/Dr.Harsh Vardhan(Science
-                                And Technology Minister)/Meenakshi Lekhi/Shiv Charan Goyal (M.L.A Moti Nagar)/Sushil
+                            interviewed with DelhiTV are <strong>John Abraham, Sunny Leone, Heena Khan, Sapna Pabbhi,
+                                Infinix CEO Anish Kapoor, Avneet Kaur, Sidharth Nigam, Aisha Sharma, Manoj Bajpayee,
+                                Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend Shilpa Shinde)</strong>
+                            and he also interviewed politicians such as <strong>Manoj Tiwari, Dr. Harsh Vardhan(Science And Technology Minister), Meenakshi Lekhi, hiv Charan Goyal (M.L.A Moti Nagar), Sushil
                                 Kumar Gupta (Loksabha Member AAP)</strong>.
                         </p>
-                        <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper such as <strong>Nawan
-                            Zamana</strong>. He also write stories and influence people for good. As being a <strong>
-                            Social Media Expert </strong> he motivate crowd of People. He also inspire people with his
+                        <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper
+                            such as <strong>Nawan
+                                Zamana and Jagbani</strong>. He also write stories and influence people for good. As being a
+                            <strong>
+                                Social Media Expert </strong> he motivate crowd of People. He also inspire people with
+                            his
                             videos. He show with his videos how evil somtime could destroy life of innocent people and
                             we not encourage such acts and fight with it together to make this country proud.</p>
                     </div>
@@ -135,7 +140,7 @@
                 <div class="row">
                     <div style="margin-left: 20px">
                         <h3 style="text-align: center">I'd <i class="fas fa-heart"></i> to talk !</h3>
-                        <p style="text-align: center"><i class="far fa-envelope"></i> kushalvyas614@gmail.com    </p>
+                        <p style="text-align: center"><i class="far fa-envelope"></i> kushalvyas614@gmail.com </p>
                         <p style="text-align: center"><i class="fab fa-whatsapp"></i> +91 7206660610</p>
                         <p class="social" style="margin-bottom: -50px">
                             <img src="img/hashlogo.png">
