--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <p style="margin-left: 30px;text-align: justify">Kushal Vyas born on 31 August 1994. As a first job he served as
                             an<strong> Anchor </strong>
                             and a <strong> News presenter </strong> with <strong>Delhi99</strong>. He also worked for
-                            <strong>CM of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
+                            <strong>Chief Minister of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
                                 Handler</strong>.Currently, He is working in <strong>Zee Media</strong> as main
                             <strong>Content Programmer</strong>.</p>
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
@@ -114,7 +114,7 @@
                             interviewed with DelhiTV are <strong>John Abraham, Sunny Leone, Heena Khan, Sapna Pabbhi,
                                 Infinix CEO Anish Kapoor, Avneet Kaur, Sidharth Nigam, Aisha Sharma, Manoj Bajpayee,
                                 Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend Shilpa Shinde)</strong>
-                            and he also interviewed politicians such as <strong>Manoj Tiwari, Dr. Harsh Vardhan(Science And Technology Minister), Meenakshi Lekhi, hiv Charan Goyal (M.L.A Moti Nagar), Sushil
+                            and he also interviewed politicians such as <strong>Manoj Tiwari, Dr. Harsh Vardhan(Science And Technology Minister), Meenakshi Lekhi, Shiv Charan Goyal (M.L.A Moti Nagar), Sushil
                                 Kumar Gupta (Loksabha Member AAP)</strong>.
                         </p>
                         <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper
