--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="col-sm-6 text-left">
                         <p style="margin-left: 30px;text-align: justify">Kushal Vyas born on 31 August 1994. As a first job he served as
                             an<strong> Anchor </strong>
-                            and a <strong> News presenter </strong> with <strong>Delhi99</strong>. He also worked for
+                            and a <strong> News presenter </strong> with <strong>DelhiTV</strong>. He also worked for
                             <strong>Chief Minister of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
                                 Handler</strong>.Currently, He is working in <strong>Zee Media</strong> as main
                             <strong>Content Programmer</strong>.</p>
