content acc client

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                             an<strong> Anchor </strong>
                             and a <strong> News presenter </strong> with <strong>DelhiTV</strong>. He also worked for
                             <strong>Chief Minister of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
-                                Handler</strong>.Currently, He is working in <strong>Zee Media</strong> as main
-                            <strong>Content Programmer</strong>.</p>
+                                Handler</strong>.Currently, He is working in <strong>Zee Media(ez)</strong> as main
+                            <strong>Executive Content Programmer</strong>.</p>
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
                     </div>
                     <div class="col-sm-6">
