space issue resolved

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6 text-left">
-                        <p style="margin-left: 30px;text-align: justify">Kushal Vyas born on 31 August 1994. As a first job he served as
+                        <p style="margin-left: 30px;">Kushal Vyas born on 31 August 1994. As a first job he served as
                             an<strong> Anchor </strong>
                             and a <strong> News presenter </strong> with <strong>DelhiTV</strong>. He also worked for
                             <strong>Chief Minister of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
-                                Handler</strong>.Currently, He is working in <strong>Zee Media(ez)</strong> as main
+                                Handler</strong>.Currently,He is working in <strong>Zee Media(eZ)</strong> as main
                             <strong>Executive Content Programmer</strong>.</p>
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
                     </div>
                     <div class="col-sm-6">
-                        <p style="text-align: justify;margin-left: 30px">In this small span of time <strong> Kushal
+                        <p style="margin-left: 30px">In this small span of time <strong> Kushal
                             Vyas</strong> got alot
                             of opportunities to prove
                             himself and indeed he proved himself worth. With his passion and courage he managed to
