update index.html (ui)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,43 +47,18 @@
             </div>
         </div>
     </div>
-
     <div class="container-fluid">
         <div class="row no-space">
-            <ul>
-                <li><a href="https://instagram.com/kushal_vyas_official">
-                <li><h4>@kushal_vyas_official</h4></li>
-                <i class="fab fa-instagram icon" style="margin-left: 80px" icon></i></a></li></ul>
-            <ul>
-                <li><a href="https://snapchat.com/add/kushal_sharma77">
-                <li><h4>@kushal vyas</h4></li>
-                <i class="fab fa-snapchat-square icon" style="margin-left: 80px"></i></a></li></ul>
-            <ul>
-                <li><a href="https://www.kushaalvyas.blogspot.com">
-                <li><h4>@kushaalvyas</h4></li>
-                <i class="fab fa-blogger icon" style="margin-left: 80px"></i></i></a></li></ul>
-            <ul>
-                <li><a href="https://twitter.com/kushalvyas16">
-                <li><h4>@kushalvyas16</h4></li>
-                <i class="fab fa-twitter icon" style="margin-left: 80px"></i></a></li></ul>
+            <ul><li><i><img src="img/insta.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><i><img src="img/snapchat.svg" style="margin-top: 30px" class="social"/></i></li></ul>
+            <ul><li><i><img src="img/blogspot.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><i><img src="img/twitter.svg" class="social" style="margin-top: 30px"/></i></li></ul>
         </div>
         <div class="row no-space">
-            <ul>
-                <li><a href="https://www.youtube.com/c/kushalvyas">
-                <li><h4>@kushalvyas</h4></li>
-                <a><i class="fab fa-youtube icon" style="margin-left: 80px"></i></a></li></ul>
-            <ul>
-                <li><a href="https://www.akushalvyaswriter.wordpress.com">
-                <li><h4>@akushalvyaswriter</h4></li>
-                <i class="fab fa-wordpress-simple icon" style="margin-left: 80px"></i></a></li></ul>
-            <ul>
-                <li><a href="https://linkedin.com/in/kushal-sharma-500050179">
-                <li><h4>@kushalvyas</h4></li>
-                <i class="fab fa-linkedin-in icon" style="margin-left: 80px"></i></i></a></li></ul>
-            <ul class="facebook">
-                <li><a href="https://www.facebook.com/kushalvyas786">
-                <li><h4>@kushalvyas786</h4></li>
-                <i class="fab fa-facebook-f icon" style="margin-left: 80px"></i></a></li></ul>
+            <ul><li><i><img src="img/youtube.svg" class="social"/></i></li></ul>
+            <ul><li><i><img src="img/wordpress.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><i><img src="img/linkedin.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><i><img src="img/facebook.svg" class="social" style="margin-top: 30px"/></i></li></ul>
         </div>
     </div>
 
@@ -142,13 +117,13 @@
                         <h3 style="text-align: center">I'd <i class="fas fa-heart"></i> to talk !</h3>
                         <p style="text-align: center"><i class="far fa-envelope"></i> kushalvyas614@gmail.com </p>
                         <p style="text-align: center"><i class="fab fa-whatsapp"></i> +91 7206660610</p>
-                        <p class="social" style="margin-bottom: -50px">
-                            <img src="img/hashlogo.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+        <img src="img/hashlogo.png" class="tag-logo" >
+    <p style="color: grey;text-align: center">Powered by rajatbangar</p>
 </section>
 <!-- Javascript files-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
