--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
     </div>
     <div class="container-fluid">
         <div class="row no-space">
-            <ul><li><i><img src="img/insta.svg" class="social" style="margin-top: 30px"/></i></li></ul>
-            <ul><li><i><img src="img/snapchat.svg" style="margin-top: 30px" class="social"/></i></li></ul>
-            <ul><li><i><img src="img/blogspot.svg" class="social" style="margin-top: 30px"/></i></li></ul>
-            <ul><li><i><img src="img/twitter.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><a href="https://instagram.com/kushal_vyas_official"><i><img src="img/insta.svg" class="social" style="margin-top: 30px"/></i></a></li></ul>
+            <ul><li><a href="https://www.snapchat.com/add/kushal_sharma77"><i><img src="img/snapchat.svg" style="margin-top: 30px" class="social"/></i></a></li></ul>
+            <ul><li><a href="https://www.kushaalvyas.blogspot.com"><i><img src="img/blogspot.svg" class="social" style="margin-top: 30px"/></i></a></li></ul>
+            <ul><li><a href="https://twitter.com/kushalvyas16"><i><img src="img/twitter.svg" class="social" style="margin-top: 30px" id="twitter"/></i></a></li></ul>
         </div>
         <div class="row no-space">
-            <ul><li><i><img src="img/youtube.svg" class="social"/></i></li></ul>
-            <ul><li><i><img src="img/wordpress.svg" class="social" style="margin-top: 30px"/></i></li></ul>
-            <ul><li><i><img src="img/linkedin.svg" class="social" style="margin-top: 30px"/></i></li></ul>
-            <ul><li><i><img src="img/facebook.svg" class="social" style="margin-top: 30px"/></i></li></ul>
+            <ul><li><a href="https://www.youtube.com/c/kushalvyas"><i><img src="img/youtube.svg" style="margin-top: 30px" class="social"/></i></a></li></ul>
+            <ul><li><a href="https://www.akushalvyaswriter.wordpress.com"><i><img src="img/wordpress.svg" class="social" style="margin-top: 30px"/></i></a></li></ul>
+            <ul><li><a href="https://www.linkedin.com/in/kushal-sharma-500050179"><i><img src="img/linkedin.svg" class="social" style="margin-top: 30px"/></i></a></li></ul>
+            <ul><li><a href="https://www.facebook.com/kushalvyas786"><i><img src="img/facebook.svg" class="social" style="margin-top: 30px"/></i></a></li></ul>
         </div>
     </div>
 
