--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     </div>
                     <div class="col-sm-6">
                         <p style="margin-left: 30px">In this small span of time <strong> Kushal
-                            Vyas</strong> got alot
+                            Vyas</strong> got a lot
                             of opportunities to prove
-                            himself and indeed he proved himself worth. With his passion and courage he managed to
+                            himself and indeed he proved himself commendable. With his passion and courage he managed to
                             interview many bollywood Star's and Politicians. Some the Bollywood Celebrities he
                             interviewed with DelhiTV are <strong>John Abraham, Sunny Leone, Heena Khan, Sapna Pabbhi,
                                 Infinix CEO Anish Kapoor, Avneet Kaur, Sidharth Nigam, Aisha Sharma, Manoj Bajpayee,
@@ -94,12 +94,12 @@
                         </p>
                         <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper
                             such as <strong>Nawan
-                                Zamana and Jagbani</strong>. He also write stories and influence people for good. As being a
+                                Zamana</strong> and <strong>Jagbani</strong>. He also write stories and influence people for good. As being a
                             <strong>
                                 Social Media Expert </strong> he motivate crowd of People. He also inspire people with
                             his
-                            videos. He show with his videos how evil somtime could destroy life of innocent people and
-                            we not encourage such acts and fight with it together to make this country proud.</p>
+                            videos. He show with his videos that how sometimes evil could destroy life of innocent people and
+                            we should not encourage such acts and fight with it together to make this country proud.</p>
                     </div>
                 </div>
             </div>
