--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
+    <meta property="og:image" content="https://i.imgur.com/hGHP0CO.jpg">
     <!-- Bootstrap and Font Awesome css-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -76,7 +77,7 @@
                             an<strong> Anchor </strong>
                             and a <strong> News presenter </strong> with <strong>DelhiTV</strong>. He also worked for
                             <strong>Chief Minister of Punjab Captain Amrinder Singh</strong> as a <strong>Social Media
-                                Handler</strong>.Currently,He is working in <strong>Zee Media(eZ)</strong> as main
+                                Handler</strong>.Currently,He is working in <strong>Zee Media</strong> as main
                             <strong>Executive Content Programmer</strong>.</p>
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
                     </div>
