--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <meta property="og:image" content="https://i.imgur.com/hGHP0CO.jpg">
+    <meta property="og:image" content="https://i.imgur.com/y4uEbfs.jpg">
     <!-- Bootstrap and Font Awesome css-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -89,7 +89,7 @@
                             interview many bollywood Star's and Politicians. Some the Bollywood Celebrities he
                             interviewed with DelhiTV are <strong>John Abraham, Sunny Leone, Heena Khan, Sapna Pabbhi,
                                 Infinix CEO Anish Kapoor, Avneet Kaur, Sidharth Nigam, Aisha Sharma, Manoj Bajpayee,
-                                Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend Shilpa Shinde)</strong>
+                                Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend of Shilpa Shinde) etc.</strong>
                             and he also interviewed politicians such as <strong>Manoj Tiwari, Dr. Harsh Vardhan(Science And Technology Minister), Meenakshi Lekhi, Shiv Charan Goyal (M.L.A Moti Nagar), Sushil
                                 Kumar Gupta (Loksabha Member AAP)</strong>.
                         </p>
