--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                             interview many bollywood Star's and Politicians. Some the Bollywood Celebrities he
                             interviewed with DelhiTV are <strong>John Abraham, Sunny Leone, Heena Khan, Sapna Pabbhi,
                                 Infinix CEO Anish Kapoor, Avneet Kaur, Sidharth Nigam, Aisha Sharma, Manoj Bajpayee,
-                                Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend of Shilpa Shinde) etc.</strong>
+                                Gippy Grewal, Binnu Dhillon, Romit Raj (Ex Boyfriend of Shilpa Shinde).</strong>
                             and he also interviewed politicians such as <strong>Manoj Tiwari, Dr. Harsh Vardhan(Science And Technology Minister), Meenakshi Lekhi, Shiv Charan Goyal (M.L.A Moti Nagar), Sushil
-                                Kumar Gupta (Loksabha Member AAP)</strong>.
+                                Kumar Gupta (Loksabha Member AAP)</strong> etc.
                         </p>
                         <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper
                             such as <strong>Nawan
