--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </p>
                         <p style="margin-left: 30px">Kushal Vyas is also a writer. He wrote many articles for newspaper
                             such as <strong>Nawan
-                                Zamana</strong> and <strong>Jagbani</strong>. He also write stories and influence people for good. As being a
+                                Zamana</strong> and <strong>JagBani</strong>. He also write stories and influence people for good. As being a
                             <strong>
                                 Social Media Expert </strong> he motivate crowd of People. He also inspire people with
                             his
