content update bio article

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <p><img src="img/about.png" alt="This is me" class="image img-circle img-responsive"></p>
                     </div>
                     <div class="col-sm-6">
-                        <p style="margin-left: 30px">In this small span of time <strong> Kushal
+                        <p style="margin-left: 30px">In this short span of time <strong> Kushal
                             Vyas</strong> got a lot
                             of opportunities to prove
                             himself and indeed he proved himself commendable. With his passion and courage he managed to
